# openrgb-rs2

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: clippy.yml  doc.yml  release.yml  tests.yml  warnings.yml
examples/: color.rs  command.rs  command_group.rs  connect.rs  controllers.rs  group.rs  profiles.rs  segment.rs  zone.rs
src/: error.rs  lib.rs
src/client/: command.rs  controller.rs  group.rs  mod.rs  segment.rs  zone.rs
src/protocol/: deserialize.rs  mod.rs  packet.rs  serialize.rs  stream.rs
src/protocol/data/: color.rs  mod.rs  protocol_option.rs
src/protocol/data/implement/: array.rs  flags.rs  mod.rs  primitive.rs  slice.rs  string.rs  tuple.rs  vec.rs
src/protocol/data/openrgb/: controller.rs  device_type.rs  led.rs  mod.rs  mode.rs  plugin.rs  segment.rs  zone.rs
