[package]
name = "openrgb2"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
authors = [
    "Julien Nicoulaud <julien.nicoulaud@gmail.com>",
    "Arthur de Groot <arthurdegroot99@gmail.com>",
]
description = "OpenRGB SDK client, successor to openrgb"
documentation = "https://docs.rs/openrgb2"
homepage = "https://github.com/Achtuur/openrgb-rs2"
repository = "https://github.com/Achtuur/openrgb-rs2"
readme = "README.md"
license = "GPL-2.0"
keywords = ["RGB", "LED", "gaming"]
categories = ["network-programming", "game-development"]
exclude = [".github/*", ".run/*"]

[dependencies]
array2d = "0.3.2"
delegate = "0.13.3"
flagset = "0.4.7"
rgb = "0.8.51"
thiserror = "2.0.12"
tokio = { version = "1.46.1", default-features = false, features = ["rt-multi-thread", "net", "sync", "io-util"] }
tracing = "0.1.41"

[dev-dependencies]
log = "0.4.27"
simplelog = "0.12.2"
tokio-test = "0.4.4"
tokio = { version = "1.46.1", default-features = false, features = ["macros"] }
tracing-test = "0.2.5"
